[package]
name = "oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.18", features = ["multipart", "macros"] }
axum-extra = { version = "0.8", features = ["cookie-private"] }
chrono = { version = "0.4.26", features = ["clock"] }
oauth2 = "4.4.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
shuttle-secrets = "0.34.0"
shuttle-shared-db = { version = "0.34.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "macros", "chrono"] }
time = "0.3.25"
tokio = "1.28.2"
tracing = "0.1.37"